--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/BUILD.bazel
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/BUILD.bazel
@@ -13,7 +13,6 @@ sass_binary(
 ng_project(
     name = "signals-tab",
     srcs = [
-        "signal-data-source.ts",
         "signals-tab.component.ts",
         "signals-visualizer.ts",
     ],
@@ -22,16 +21,14 @@ ng_project(
         ":signals-tab_styles",
     ],
     deps = [
-        "//:node_modules/@angular/cdk",
         "//:node_modules/@angular/core",
         "//:node_modules/@angular/material",
         "//:node_modules/@types/d3",
         "//:node_modules/d3",
         "//:node_modules/dagre-d3-es",
-        "//:node_modules/rxjs",
         "//devtools/projects/ng-devtools/src/lib/application-operations",
         "//devtools/projects/ng-devtools/src/lib/application-services:frame_manager",
-        "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signal-graph:signal-graph-manager",
+        "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signal-graph",
         "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details",
         "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-value-tree",
         "//devtools/projects/ng-devtools/src/lib/shared/button",
