--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/BUILD.bazel
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/BUILD.bazel
@@ -14,6 +14,7 @@ sass_binary(
 ng_project(
     name = "signals-details",
     srcs = [
+        "signal-data-source.ts",
         "signals-details.component.ts",
     ],
     angular_assets = [
@@ -24,6 +25,8 @@ ng_project(
         "//:node_modules/@angular/cdk",
         "//:node_modules/@angular/core",
         "//:node_modules/@angular/material",
+        "//:node_modules/rxjs",
+        "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signal-graph",
         "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-value-tree",
         "//devtools/projects/ng-devtools/src/lib/shared/button",
         "//devtools/projects/protocol",
