--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/BUILD.bazel
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/BUILD.bazel
@@ -13,6 +13,7 @@ sass_binary(
 ng_project(
     name = "signals-visualizer",
     srcs = [
+        "dagre-d3-types.ts",
         "signals-visualizer.component.ts",
         "signals-visualizer.ts",
     ],
